<resources>
    <string name="app_name">Migi</string>
    <string name="activity_login_txt_username">Usuario</string>
    <string name="activity_login_txt_password">Contraseña</string>
    <string name="activity_login_txt_connect">Conectarse</string>
    <string name="activity_login_error_message">Usuario o contraseña incorrectos</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Profil image</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_username">Dioxo</string>
    <string name="nav_header_user_email">DuckDonald@gmail.com</string>
    <string name="nav_header_liste_taches">Liste de tâches</string>
    <string name="nav_header_reviser">À reviser</string>
    <string name="nav_header_notes">Toutes les notes</string>
    <string name="nav_header_tags">Tags</string>
    <string name="nav_header_corbeille">Corbeille</string>
    <string name="title_activity_note">NoteActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_login_txt_register">Rejoignez-nous</string>
    <string name="activity_login_txt_email">Email</string>

</resources>
